# localsky

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  NOTICE  README.md  SECURITY.md  THREAT_MODEL.md  docker-compose.yml  docker-entrypoint.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: api.md  book.toml  configuration.md  controllers.md  getting-started.md  hacs.md  irrigation-engine.md  sensors.md  skip-rules.md  soil-textures.md  standalone.md  ux-journey.md
docs/assets/brand/: .gitignore  build_logo.py
docs/assets/grass-species/: README.md
docs/src/: SUMMARY.md  advanced.md  advisor.md  api.md  authentication.md  backup-restore.md  configuration.md  controllers.md  devices.md  diy-controllers.md  faq.md  first-soil-sensor.md  forecast.md  getting-started.md  grass-species.md  hacs.md  history.md  home-assistant-app.md  introduction.md  irrigation-engine.md  llm.md  location.md  manual.md  migrating-from-ha.md  notifications.md  provider-matrix.md  radar.md  restrictions.md  reverse-proxy.md  schedules.md  sensors.md  skip-breakdown.md  skip-rules.md  soil-sensors.md  soil-textures.md  standalone.md  troubleshooting.md  upgrading.md  ux-journey.md  verdict-strip.md  (+2 more)
docs/theme/css/: custom.css
docs/theme/js/: backlink.js  branding.js  umami.js
examples/esphome/: README.md  localsky-irrigation.yaml
examples/http/: README.md  localsky-irrigation.ino
public/: irrigation-toolbar.js  manifest.webmanifest  offline.html  radar.js  sw.template.js
public/grass-species/: .gitkeep  ATTRIBUTION.md  README.md
src/: agronomy.rs  app.rs  base.rs  demo_data.rs  docs.rs  docs_serve.rs  explain.rs  gates_catalog.rs  instance.rs  lib.rs  main.rs  metrics.rs  nav_log.rs  push_client.rs  radar_catalog.rs  reason_render.rs  refresher.rs  runtime.rs  runtime_helpers.rs  sw.rs  timefmt.rs  timeutil.rs  updates.rs  zones.rs
src/api/: auth.rs  backup.rs  config.rs  devices.rs  forecast.rs  health.rs  info.rs  ingest.rs  irrigation.rs  location.rs  manifest.rs  mod.rs  photos.rs  precip.rs  sensors.rs  snapshot_tests.rs  sources.rs  tropical.rs  weather.rs  windgrid.rs  wizard.rs
src/api/snapshots/: localsky__api__snapshot_tests__tests__forecast_bias_v1.snap  localsky__api__snapshot_tests__tests__forecast_v1.snap  localsky__api__snapshot_tests__tests__info_v1.snap  localsky__api__snapshot_tests__tests__irrigation_action_run.snap  localsky__api__snapshot_tests__tests__irrigation_v1.snap  localsky__api__snapshot_tests__tests__openmeteo_models_v1.snap  localsky__api__snapshot_tests__tests__radar_tropical_v1.snap  localsky__api__snapshot_tests__tests__radar_windgrid_v1.snap  localsky__api__snapshot_tests__tests__tempest_v1.snap
src/auth/: demo_guard.rs  hash.rs  middleware.rs  mod.rs  store.rs
src/components/: about.rs  connection.rs  feature_stub.rs  feedback.rs  footer.rs  health_banner.rs  hero.rs  humidity.rs  install_prompt.rs  lightning.rs  login.rs  mobile_nav.rs  mod.rs  nav.rs  page_header.rs  pressure.rs  radar.rs  rain.rs  settings_ui.rs  sidebar.rs  solar.rs  time_bucket.rs  units_fmt.rs  verdict.rs  watering_week.rs  weather_telemetry.rs  welcome_card.rs  wind.rs
src/components/controllers_form/: fields.rs  mod.rs
src/components/forecast/: daily.rs  glyph.rs  hourly.rs  mod.rs
src/components/historyview/: mod.rs
src/components/irrigation/: advisor.rs  anomaly_banner.rs  controls.rs  forecast.rs  hero.rs  history.rs  mod.rs  per_zone_history.rs  running_banner.rs  soil_sensors.rs  toolbar.rs  verdict_strip.rs  water_budget.rs  zone_math.rs  zones.rs
src/components/rules/: conditions.rs  mod.rs
src/components/sensors/: mod.rs
src/components/settings/: account.rs  advanced.rs  cloud_weather.rs  controllers.rs  data_sources.rs  devices.rs  help.rs  home.rs  (+14 more)
src/config/: env_compat.rs  field_overrides.rs  kind_labels.rs  loader.rs  mod.rs  region.rs  schema.rs  store.rs  validate.rs  wizard.rs
src/controllers/: bhyve.rs  conformance.rs  dry_run.rs  ha_service_call.rs  http_generic.rs  hydrawise.rs  mod.rs  mqtt_command.rs  opensprinkler_direct.rs  rachio.rs  rainbird.rs  reaper.rs  registry.rs
src/devices/: builder.rs  ha_import.rs  mod.rs  reconcile.rs  registry.rs
src/discovery/: ecowitt.rs  mod.rs  opensprinkler.rs
src/engine/: budget.rs  conditions.rs  cycle_soak.rs  et0.rs  forecast_bias.rs  mod.rs  restrictions.rs  scripting.rs  skip_rules.rs  soil_catalog.rs  soil_forecast.rs  species_catalog.rs  sprinkler_catalog.rs  sunrise.rs  verdict_strip.rs  water_balance.rs
src/forecast/: mod.rs  model_catalog.rs  refresher.rs  snapshot.rs  store.rs
src/ha/: mod.rs  mqtt_publish.rs  refresher.rs  rest.rs  skip_logic.rs  snapshot.rs  store.rs  ws.rs
src/history/: db.rs  ingest.rs  mod.rs  types.rs
src/llm/: advisor.rs  cache.rs  client.rs  mod.rs  prompts.rs
src/net/: mod.rs  safe_fetch.rs
src/network/: mdns.rs  mod.rs
src/notifications/: mod.rs
src/persistence/: active_runs.rs  config_snapshots.rs  forecast_observations.rs  irrigation_control.rs  mod.rs  runner.rs  runs.rs  sensor_history.rs  verdict_history.rs  weather_sampler.rs
src/ports/: config_store.rs  irrigation_controller.rs  llm_provider.rs  mod.rs  notification_sink.rs  weather_source.rs
src/push/: api.rs  dispatcher.rs  mod.rs  store.rs
src/scheduler/: dispatch_gate.rs  manual.rs  mod.rs  smart_morning.rs
src/sources/: ambient_weather.rs  blitzortung.rs  bus_recorder.rs  cloud_catalog.rs  davis_wll.rs  demo_replay.rs  ecowitt_gw_poll.rs  ecowitt_local.rs  forecast_bridge.rs  ha_passthrough.rs  http_webhook.rs  influxdb.rs  lacrosse.rs  merge.rs  met_norway.rs  mod.rs  mqtt_subscribe.rs  netatmo.rs  noaa_mrms.rs  nws.rs  openweather.rs  pirate_weather.rs  prometheus.rs  registry.rs  rest_poll.rs  snapshot_bridge.rs  synoptic.rs  tempest_ws.rs  tuya_cloud.rs  units.rs  weatherkit.rs  yolink.rs
src/tempest/: listener.rs  mod.rs  packets.rs  state.rs
style/: main.scss
(+66 files in other folders)
