[package]
name = "localsky"
version = "0.2.0-alpha.1"
edition = "2021"
license = "Apache-2.0"
description = "Local-first weather and irrigation control with native FAO-56 ET, multi-source weather merge, multi-controller HAL, optional Home Assistant, and optional local LLM advisor."
repository = "https://github.com/silenthooligan/localsky"
homepage = "https://github.com/silenthooligan/localsky"
readme = "README.md"
keywords = ["weather", "irrigation", "iot", "pwa", "leptos"]
categories = ["web-programming", "science"]
authors = ["silenthooligan <erik.skean@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }

# SSR side
axum = { version = "0.8", features = ["macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "set-header"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Time. wasmbind so Local::now() works in the hydrate WASM bundle
# (without it, chrono panics on the browser side).
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Concurrent state — small, lock-free for read-heavy snapshot
arc-swap = { version = "1", optional = true }

# Async helpers
futures = "0.3"
async-stream = { version = "0.3", optional = true }

# HA REST client. rustls-tls so the alpine-based deploy image doesn't
# need OpenSSL in the runtime layer; HA over HTTPS will work the same.
reqwest = { version = "0.13", default-features = false, features = ["json", "http2", "rustls", "webpki-roots"], optional = true }
anyhow = { version = "1", optional = true }

# Async trait objects. Required for the ports/* trait set (WeatherSource,
# IrrigationController, LlmProvider, NotificationSink, ConfigStore) which
# are used as Arc<dyn Trait> in the runtime registries. Native async fn in
# traits cannot be made object-safe without this shim until RPIT trait
# objects ship.
async-trait = { version = "0.1", optional = true }

# Typed error enums. Used by ports/* result types and by the engine layer.
thiserror = { version = "2", optional = true }

# TOML parser/serializer for /data/localsky.toml config file.
toml = { version = "0.8", optional = true }

# JSON Schema generation from serde-derived types. Served at
# /api/config/schema so the settings UI can render form fields and
# validate user input client-side.
schemars = { version = "0.8", optional = true }

# MQTT client for HA discovery + state publish (HA-optional path: HA
# users get free sensor.localsky_* entities without LocalSky reading HA).
# Pure-Rust, no native deps; rustls-tls keeps the runtime image small.
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"], optional = true }

# SQLite for the irrigation run-history layer. bundled features so we
# don't need libsqlite3 on the runtime image (alpine-friendly). Used
# from spawn_blocking so its sync API doesn't stall the tokio runtime.
rusqlite = { version = "0.39", features = ["bundled"], optional = true }

# Web Push: sends notifications to subscribed PWAs via VAPID. Same
# rustls-tls toggle as reqwest so the runtime image stays OpenSSL-free.
web-push = { version = "0.11", default-features = false, features = ["isahc-client"], optional = true }
# Encode/decode the VAPID base64url public key. Used on both sides
# (server: read env -> serve via /api/push/vapid-key; hydrate WASM:
# decode + Uint8Array conversion before pushManager.subscribe). Pure
# Rust, no_std-compatible, so it's free to link into the WASM bundle.
base64 = "0.22"

# WASM
wasm-bindgen = { version = "=0.2.121", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
gloo-net = { version = "0.7", features = ["http", "eventsource"], optional = true }
gloo-timers = { version = "0.4", features = ["futures"], optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Storage",
    "Navigator",
    "ServiceWorkerContainer",
    "ServiceWorkerRegistration",
    "ServiceWorker",
    "ServiceWorkerState",
    "MediaQueryList",
    "MediaQueryListEvent",
    "PushManager",
    "PushSubscription",
    "PushSubscriptionInit",
    "PushSubscriptionOptionsInit",
    "PushEncryptionKeyName",
    "Notification",
    "NotificationOptions",
    "NotificationPermission",
    "HtmlInputElement",
    "Event",
    "MessageEvent",
    "MouseEvent",
    "InputEvent",
] }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:gloo-net",
    "dep:gloo-timers",
    "dep:js-sys",
    "dep:web-sys",
]
ssr = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:leptos_axum",
    "dep:tracing-subscriber",
    "dep:arc-swap",
    "dep:async-stream",
    "dep:reqwest",
    "dep:anyhow",
    "dep:async-trait",
    "dep:thiserror",
    "dep:toml",
    "dep:schemars",
    "dep:rumqttc",
    "dep:rusqlite",
    "dep:web-push",
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos_meta/ssr",
]

[package.metadata.leptos]
output-name = "localsky"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "0.0.0.0:8090"
reload-port = 3001
end2end-cmd = "true"
end2end-dir = "."
browserquery = "defaults"
watch = false
env = "PROD"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
