[package]
name = "localsky"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
description = "Local-first weather and irrigation control with native FAO-56 ET, multi-source weather merge, multi-controller HAL, optional Home Assistant, and optional local LLM advisor."
repository = "https://github.com/silenthooligan/localsky"
homepage = "https://github.com/silenthooligan/localsky"
readme = "README.md"
keywords = ["weather", "irrigation", "iot", "pwa", "leptos"]
categories = ["web-programming", "science"]
authors = ["silenthooligan"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }

# SSR side
axum = { version = "0.8", features = ["macros", "multipart"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.7", features = ["fs", "compression-gzip", "compression-br", "set-header", "limit"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Time. wasmbind so Local::now() works in the hydrate WASM bundle
# (without it, chrono panics on the browser side).
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Concurrent state: small, lock-free for read-heavy snapshot
arc-swap = { version = "1", optional = true }

# LAN device discovery (Phase E2): enumerate local interfaces so the
# Ecowitt UDP discovery can broadcast on every NIC of a dual-homed host.
if-addrs = { version = "0.15", optional = true }

# WebSocket client. HA's device/entity registries (Phase F1) ride the
# on-LAN ws:// endpoint, which needs no TLS; the Blitzortung community
# lightning feed is wss:// on 443, so the rustls-webpki feature is on
# (same rustls/webpki-roots stack reqwest already pulls, so the runtime
# image stays OpenSSL-free).
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"], optional = true }

# Async helpers
futures = "0.3"
async-stream = { version = "0.3", optional = true }

# HA REST client. rustls-tls so the alpine-based deploy image doesn't
# need OpenSSL in the runtime layer; HA over HTTPS will work the same.
reqwest = { version = "0.13", default-features = false, features = ["json", "http2", "rustls", "webpki-roots"], optional = true }
anyhow = { version = "1", optional = true }

# Async trait objects. Required for the ports/* trait set (WeatherSource,
# IrrigationController, LlmProvider, NotificationSink, ConfigStore) which
# are used as Arc<dyn Trait> in the runtime registries. Native async fn in
# traits cannot be made object-safe without this shim until RPIT trait
# objects ship.
async-trait = { version = "0.1", optional = true }

# Typed error enums. Used by ports/* result types and by the engine layer.
thiserror = { version = "2", optional = true }

# TOML parser/serializer for /data/localsky.toml config file.
toml = { version = "1.0", optional = true }

# Rhai: embedded, sandboxed scripting for user-defined skip rules. `sync`
# makes Engine/AST Send+Sync so a compiled script set can move into the
# refresher task. Augment-only: scripts can add a skip, never clear a
# deterministic safety gate (enforced by the caller).
rhai = { version = "1", default-features = false, features = [
    "std",
    "sync",
], optional = true }

# JSON Schema generation from serde-derived types. Served at
# /api/config/schema so the settings UI can render form fields and
# validate user input client-side.
schemars = { version = "1.0", optional = true }

# MQTT client for HA discovery + state publish (HA-optional path: HA
# users get free sensor.localsky_* entities without LocalSky reading HA).
# Pure-Rust, no native deps; rustls-tls keeps the runtime image small.
rumqttc = { version = "0.25", default-features = false, features = ["use-rustls"], optional = true }

# SQLite for the irrigation run-history layer. bundled features so we
# don't need libsqlite3 on the runtime image (alpine-friendly). Used
# from spawn_blocking so its sync API doesn't stall the tokio runtime.
rusqlite = { version = "0.40", features = ["bundled"], optional = true }

# Web Push: sends notifications to subscribed PWAs via VAPID. Same
# rustls-tls toggle as reqwest so the runtime image stays OpenSSL-free.
web-push = { version = "0.11", default-features = false, features = ["isahc-client"], optional = true }
# Encode/decode the VAPID base64url public key. Used on both sides
# (server: read env -> serve via /api/push/vapid-key; hydrate WASM:
# decode + Uint8Array conversion before pushManager.subscribe). Pure
# Rust, no_std-compatible, so it's free to link into the WASM bundle.
base64 = "0.22"

# HMAC-SHA256 signing for the Tuya cloud adapter (openapi.tuyaXX.com
# requires per-request HMAC signatures). Pure Rust, all transitively
# present already via web-push; making them direct deps so the Tuya
# source can use them. ssr-only: Tuya signing never runs in the WASM
# bundle.
sha2 = { version = "0.11", optional = true }
hmac = { version = "0.13", optional = true }
hex = { version = "0.4", optional = true }

# ES256 (P-256 ECDSA) JWT signing for the Apple WeatherKit source. Pure Rust
# (RustCrypto), so it won't pull a second C crypto backend alongside rustls.
# ssr-only: WeatherKit signing never runs in the WASM bundle.
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"], optional = true }

# Pure-Rust GRIB2 decoder for the NOAA MRMS radar-QPE source. MRMS publishes its
# 1 km national QPE grids as GRIB2; the adapter decodes the cell over the
# deployment lat/lon into a current rain reading. gribberish stays pure Rust with
# no C deps. We enable ONLY the `png` feature: MRMS 2D products are packed with
# data-representation template 5.41 (PNG-packed), so without `png` every message
# fails to decode (data() returns Err and the source silently emits nothing). The
# `png` feature is the pure-Rust `png` crate (no native lib), NOT the `jpeg`
# feature, which pulls openjpeg-sys (a C lib that also collides with
# libsqlite3-sys); we leave `jpeg` OFF for that reason. default-features=false
# keeps everything else off, so the runtime image stays slim. ssr-only: GRIB
# decoding never runs in the WASM bundle (the hydrate build sees the NoaaMrms
# SourceKind variant in the shared schema but never the adapter or this dep).
gribberish = { version = "1", default-features = false, features = ["png"], optional = true }

# WASM
wasm-bindgen = { version = "=0.2.126", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
gloo-net = { version = "0.7", features = ["http", "eventsource"], optional = true }
gloo-timers = { version = "0.4", features = ["futures"], optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Storage",
    "Navigator",
    "Clipboard",
    "ServiceWorkerContainer",
    "ServiceWorkerRegistration",
    "ServiceWorker",
    "ServiceWorkerState",
    "MediaQueryList",
    "MediaQueryListEvent",
    "PushManager",
    "PushSubscription",
    "PushSubscriptionInit",
    "PushSubscriptionOptionsInit",
    "PushEncryptionKeyName",
    "Notification",
    "NotificationOptions",
    "NotificationPermission",
    "HtmlInputElement",
    "Event",
    "MessageEvent",
    "MouseEvent",
    "InputEvent",
    "Document",
    "Element",
    "HtmlElement",
    "DomRect",
    "NodeList",
    "ScrollIntoViewOptions",
    "ScrollBehavior",
    "ScrollLogicalPosition",
    "File",
    "FileList",
    "Blob",
    "FormData",
    "Request",
    "RequestInit",
    "Response",
    "DragEvent",
    "DataTransfer",
] }
rand = { version = "0.10", optional = true }
ipnet = { version = "2", optional = true }
argon2 = { version = "0.5", optional = true }
mdns-sd = { version = "0.20", optional = true }
# Offline lat/lon -> IANA timezone (bundled dataset; the wizard
# autofills the timezone with it so sunrise scheduling never fires at a
# UTC hour on a mis-configured container).
tzf-rs = { version = "1", optional = true }
chrono-tz = { version = "0.10", optional = true }
tar = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }
semver = { version = "1", optional = true }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
# test-util enables #[tokio::test(start_paused = true)] so the dispatch
# integration tests virtualize cycle-soak sleeps (instant + deterministic).
# Test-only; merges with the ssr build's optional tokio (features unify).
tokio = { version = "1", features = ["full", "test-util"] }

[features]
# Dev-ergonomics default so a bare `cargo clippy` / `cargo check` / rust-analyzer
# resolves: the code is ssr-or-hydrate gated, so with NO feature crate::engine
# (and friends) are absent and clippy fails to compile. SAFE: cargo-leptos sets
# both bin-default-features=false and lib-default-features=false below, and CI
# passes --no-default-features explicitly, so the real ssr (bin) and wasm
# (lib/hydrate) builds never inherit this and can never end up ssr+hydrate at once.
default = ["ssr"]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:gloo-net",
    "dep:gloo-timers",
    "dep:js-sys",
    "dep:web-sys",
]
ssr = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:leptos_axum",
    "dep:tracing-subscriber",
    "dep:arc-swap",
    "dep:if-addrs",
    "dep:tokio-tungstenite",
    "dep:async-stream",
    "dep:reqwest",
    "dep:anyhow",
    "dep:async-trait",
    "dep:thiserror",
    "dep:toml",
    "dep:rhai",
    "dep:schemars",
    "dep:rumqttc",
    "dep:rusqlite",
    "dep:web-push",
    "dep:sha2",
    "dep:hmac",
    "dep:hex",
    "dep:p256",
    "dep:gribberish",
    "dep:argon2",
    "dep:rand",
    "dep:ipnet",
    "dep:mdns-sd",
    "dep:tzf-rs",
    "dep:chrono-tz",
    "dep:tar",
    "dep:flate2",
    "dep:semver",
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos_meta/ssr",
]

[package.metadata.leptos]
output-name = "localsky"
site-root = "target/site"
site-pkg-dir = "pkg"
# Content-hash the /pkg JS/WASM/CSS filenames so each build emits new URLs that
# bust the browser cache automatically (no service-worker cache juggling, no
# stale WASM on deploy). Requires BOTH: LEPTOS_HASH_FILES=true at runtime AND
# hash.txt copied next to the binary (leptos reads it from
# current_exe().parent()/hash.txt): without both, names silently go hashless
# while the files on disk are hashed, 404-ing the WASM. See Dockerfile.
hash-files = true
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "0.0.0.0:8090"
reload-port = 3001
end2end-cmd = "true"
end2end-dir = "."
browserquery = "defaults"
watch = false
env = "PROD"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
# Thin LTO + multiple codegen units instead of fat LTO + a single unit: the
# crate grew large enough that `lto = true` + `codegen-units = 1` (one giant
# LLVM module in one rustc process) peaked past the CI runner's RAM and got
# SIGKILL'd ("cannot allocate memory"). Thin LTO keeps nearly all of the
# size win at a fraction of the peak memory, and splitting into 16 units lets
# rustc bound per-unit memory. opt-level='z' still does the per-function size
# work, so the bundle stays small.
lto = "thin"
codegen-units = 16
panic = "abort"
